Fix nav sizing on small screens

--- a/src/components/DemoPage/DemoPage.css
+++ b/src/components/DemoPage/DemoPage.css
@@ -70,6 +70,7 @@
   padding: 10px 15px;
   font-size: 1.2rem;
   margin-top: 30px;
+  text-align: center;
 }
 
 @media screen and (max-width: 1000px) {
